<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.rickandmorty.screens.title.TitleFragment"
        android:label="@string/titleLabel"
        tools:layout="@layout/fragment_title" >
        <action
            android:id="@+id/action_titleFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.rickandmorty.screens.game.GameFragment"
        android:label="@string/gameLabel"
        tools:layout="@layout/fragment_game" >
        <action
            android:id="@+id/action_gameFragment_to_gameOverFragment"
            app:destination="@id/gameOverFragment"
            app:popUpTo="@id/gameFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/gameOverFragment"
        android:name="com.example.rickandmorty.screens.score.GameOverFragment"
        android:label="@string/gameOverLabel"
        tools:layout="@layout/fragment_game_over">
        <argument
            android:name="score"
            app:argType="integer" />
        <argument
            android:name="totalQuestions"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.rickandmorty.screens.about.AboutFragment"
        android:label="@string/aboutTitle"
        tools:layout="@layout/fragment_about"/>
    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.example.rickandmorty.screens.rules.RulesFragment"
        android:label="@string/rulesTitle"
        tools:layout="@layout/fragment_rules"/>
</navigation>